(1) Added in Bootstrap CDN and updated table appearance; (2) Removed float left property from select input due to it causing layout issues

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -7,6 +7,7 @@ h1 {
     text-transform: uppercase;
 }
 
+
 #compare-section {
     border-style: solid;
     border-radius: 15px;
@@ -44,7 +45,7 @@ label {
 
 #compare-section input {
     display: inline-block;
-    float: left;
+    /*float: left;*/ /*causes issue */
     margin: 3px;
 }
 
